fix scrollbar main content

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -155,3 +155,13 @@ html {
 .v-overlay--active {
   z-index: 100 !important;
 }
+
+.w-main-content {
+  width: calc(100vw - 840px);
+  div {
+    max-width: 820px;
+  }
+  &.w-tight div {
+    max-width: 620px;
+  }
+}
